prodMetadata/src/objects/Wait_Time__c.object
<CustomObject>
    <description>Used to capture wait times for benefits, claims wait times for tracking purposes.</description>
    <fields>
        <fullName>Benefit_Type__c</fullName>
        <label>Benefit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VA Claim</fullName>
                </value>
                <value>
                    <fullName>New GI Bill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cause_of_Death__c</fullName>
        <label>Cause of Death</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Died of injuries sustained in combat</fullName>
                </value>
                <value>
                    <fullName>Suicide</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Status__c</fullName>
        <label>Claim Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting for a first evaluation appointment</fullName>
                </value>
                <value>
                    <fullName>Waiting for additional evaluation appointments</fullName>
                </value>
                <value>
                    <fullName>Waiting for ratings approval from VA, after you&apos;ve been evaluated</fullName>
                </value>
                <value>
                    <fullName>Appealing a claims decision</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Wait Times</relationshipLabel>
        <relationshipName>Wait_Times</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Currently_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the claim currently pending or the benefit not yet received as of update date?</description>
        <inlineHelpText>Is the claim currently pending or the benefit not yet received as of update date?</inlineHelpText>
        <label>Currently Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Benefit_Received__c</fullName>
        <label>Date Benefit Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Update__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date this Wait Time log was last updated</description>
        <inlineHelpText>Date this Wait Time log was last updated</inlineHelpText>
        <label>Date of Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Died_during_which_stage__c</fullName>
        <label>Died during which stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting for a first evaluation appointment</fullName>
                </value>
                <value>
                    <fullName>Waiting for additional evaluation appointments</fullName>
                </value>
                <value>
                    <fullName>Waiting for ratings approval from VA, after you&apos;ve been evaluated</fullName>
                </value>
                <value>
                    <fullName>Appealing a claims decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Died_while_seeking_benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Died while seeking benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_Financially_Stressful__c</fullName>
        <description>How financially stressful has this wait time been on a scale from 1 - 10?</description>
        <inlineHelpText>How financially stressful has this wait time been on a scale from 1 - 10?</inlineHelpText>
        <label>How Financially Stressful</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_Many_Health_Issues__c</fullName>
        <description>How many health issues were submitted with this claim?</description>
        <inlineHelpText>How many health issues were submitted with this claim?</inlineHelpText>
        <label>How Many Health Issues</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_Stressful__c</fullName>
        <description>How emotionally or psychologically stressful has this wait time been on a scale from 1 - 10?</description>
        <inlineHelpText>How emotionally or psychologically stressful has this wait time been on a scale from 1 - 10?</inlineHelpText>
        <label>How Stressful</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Cause_of_Death__c</fullName>
        <label>Other Cause of Death</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Health_Issues__c</fullName>
        <label>Other Health Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State_Benefits_Sought__c</fullName>
        <label>State Benefits Sought</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_by_Survivor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is not a wait time of this contact. This contact is a survivor of the vet who had this wait time.</description>
        <inlineHelpText>This is not a wait time of this contact. This contact is a survivor of the vet who had this wait time.</inlineHelpText>
        <label>Submitted by Survivor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Health_Issues__c</fullName>
        <label>Type of Health Issues</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mental health</fullName>
                </value>
                <value>
                    <fullName>Vision problems</fullName>
                </value>
                <value>
                    <fullName>Hearing loss</fullName>
                </value>
                <value>
                    <fullName>Scarring or burns</fullName>
                </value>
                <value>
                    <fullName>PTSD</fullName>
                </value>
                <value>
                    <fullName>TBI</fullName>
                </value>
                <value>
                    <fullName>Loss of limb</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wait_Time_in_Days__c</fullName>
        <label>Wait Time in Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_of_Service_at_As_Of_time__c</fullName>
        <description>Because this information is subject to change, it is captured here as the years of military service at the time the wait time was submitted</description>
        <inlineHelpText>Because this information is subject to change, it is captured here as the years of military service at the time the wait time was submitted</inlineHelpText>
        <label>Years of Service at As-Of time</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Wait Time</label>
    <nameField>
        <displayFormat>WT-{00000}</displayFormat>
        <label>Wait Time Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wait Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>